the_project/backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-back
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: to-do-back
  template:
    metadata:
      labels:
        app: to-do-back
    spec:
      containers:
        - name: to-do-back
          image: titunidoc/devops_kubernetes:back_2.26
