the_project/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-back-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: to-do-back
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3004
